--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+            background: linear-gradient(135deg, #5961d4 0%, #fad0c4 100%);
             color: #ffffff;
         }
 
